[tool.poetry]
name = "basic-business-logic"
version = "0.1.0"
description = ""
authors = ["zemljanichka <zemljanichka2709@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.2.1"
fastapi = "^0.111.0"
requests = "^2.31.0"
loguru = "^0.7.2"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
